--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
     "\n",
     "# Set the index to the date column\n",
     "data_by_date.set_index('date', inplace=True)\n",
-    "# data_by_date\n",
+    "data_by_date.dropna()\n",
     "\n",
     "# Use Pandas Plotting with Matplotlib to plot the data\n",
     "\n",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -281,62 +281,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean of the precipitation data is 0.18429168601950702.\n",
-      "Median of the precipitation data is 0.02.\n",
-      "Maximum number of precipitation data is 6.7.\n",
-      "Minimum number of precipitation data is 0.0.\n"
+      "Summary statistics of the precipitation data: count    2153.000000\n",
+      "mean        0.184292\n",
+      "std         0.470654\n",
+      "min         0.000000\n",
+      "25%         0.000000\n",
+      "50%         0.020000\n",
+      "75%         0.140000\n",
+      "max         6.700000\n",
+      "Name: prcp, dtype: float64.\n"
      ]
     }
    ],
    "source": [
     "# Use Pandas to calcualte the summary statistics for the precipitation data\n",
-    "mean = data_by_date[\"prcp\"].mean()\n",
-    "print(f'Mean of the precipitation data is {mean}.')\n",
     "\n",
-    "median = data_by_date[\"prcp\"].median()\n",
-    "print(f'Median of the precipitation data is {median}.')\n",
+    "# mean = data_by_date[\"prcp\"].mean()\n",
+    "# print(f'Mean of the precipitation data is {mean}.')\n",
     "\n",
-    "maximum = data_by_date[\"prcp\"].max()\n",
-    "print(f'Maximum number of precipitation data is {maximum}.')\n",
+    "# median = data_by_date[\"prcp\"].median()\n",
+    "# print(f'Median of the precipitation data is {median}.')\n",
     "\n",
-    "minimum = data_by_date[\"prcp\"].min()\n",
-    "print(f'Minimum number of precipitation data is {minimum}.')\n",
+    "# maximum = data_by_date[\"prcp\"].max()\n",
+    "# print(f'Maximum number of precipitation data is {maximum}.')\n",
     "\n",
-    "# describe = data_by_date[\"prcp\"].describe()\n",
-    "# print(f'Summary statistics of the precipitation data is {describe}.')"
+    "# minimum = data_by_date[\"prcp\"].min()\n",
+    "# print(f'Minimum number of precipitation data is {minimum}.')\n",
+    "\n",
+    "describe = data_by_date[\"prcp\"].describe()\n",
+    "print(f'Summary statistics of the precipitation data: {describe}.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stations Available: USC00519397 | Names Of The Available Stations: WAIKIKI 717.2, HI US.\n",
-      "Stations Available: USC00513117 | Names Of The Available Stations: KANEOHE 838.1, HI US.\n",
-      "Stations Available: USC00514830 | Names Of The Available Stations: KUALOA RANCH HEADQUARTERS 886.9, HI US.\n",
-      "Stations Available: USC00517948 | Names Of The Available Stations: PEARL CITY, HI US.\n",
-      "Stations Available: USC00518838 | Names Of The Available Stations: UPPER WAHIAWA 874.3, HI US.\n",
-      "Stations Available: USC00519523 | Names Of The Available Stations: WAIMANALO EXPERIMENTAL FARM, HI US.\n",
-      "Stations Available: USC00519281 | Names Of The Available Stations: WAIHEE 837.5, HI US.\n",
-      "Stations Available: USC00511918 | Names Of The Available Stations: HONOLULU OBSERVATORY 702.2, HI US.\n",
-      "Stations Available: USC00516128 | Names Of The Available Stations: MANOA LYON ARBO 785.2, HI US.\n",
-      "Number Of Stations: (9,).\n"
+     "ename": "InvalidRequestError",
+     "evalue": "SQL expression, column, or mapped entity expected - got '<sqlalchemy.engine.result.ResultProxy object at 0x000001FF08717D48>'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mInvalidRequestError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-22-e9df29302f86>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Design a query to show how many stations are available in this dataset?\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mstations\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mengine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"SELECT * FROM station\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mavailable_stations\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msession\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstations\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msession\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Anaconda\\lib\\site-packages\\sqlalchemy\\orm\\session.py\u001b[0m in \u001b[0;36mquery\u001b[1;34m(self, *entities, **kwargs)\u001b[0m\n\u001b[0;32m   1582\u001b[0m         :class:`.Session`.\"\"\"\n\u001b[0;32m   1583\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1584\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_query_cls\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mentities\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1585\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1586\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Anaconda\\lib\\site-packages\\sqlalchemy\\orm\\query.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, entities, session)\u001b[0m\n\u001b[0;32m    195\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msession\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msession\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    196\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_polymorphic_adapters\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 197\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_entities\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mentities\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    198\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    199\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_set_entities\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mentities\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mentity_wrapper\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Anaconda\\lib\\site-packages\\sqlalchemy\\orm\\query.py\u001b[0m in \u001b[0;36m_set_entities\u001b[1;34m(self, entities, entity_wrapper)\u001b[0m\n\u001b[0;32m    221\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mentities\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    222\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0ment\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mutil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_list\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mentities\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 223\u001b[1;33m                 \u001b[0mentity_wrapper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ment\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    224\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    225\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_entity_selectables\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_entities\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Anaconda\\lib\\site-packages\\sqlalchemy\\orm\\query.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, query, column, namespace)\u001b[0m\n\u001b[0;32m   4693\u001b[0m             raise sa_exc.InvalidRequestError(\n\u001b[0;32m   4694\u001b[0m                 \u001b[1;34m\"SQL expression, column, or mapped entity \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4695\u001b[1;33m                 \u001b[1;34m\"expected - got '%r'\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mcolumn\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4696\u001b[0m             )\n\u001b[0;32m   4697\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mcheck_column\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mInvalidRequestError\u001b[0m: SQL expression, column, or mapped entity expected - got '<sqlalchemy.engine.result.ResultProxy object at 0x000001FF08717D48>'"
      ]
     }
    ],
    "source": [
     "# Design a query to show how many stations are available in this dataset?\n",
-    "stations = engine.execute(\"SELECT station, name FROM station\")\n",
-    "for station in stations:\n",
-    "    print(f\"Stations Available: {station.station} | Names Of The Available Stations: {station.name}.\")\n",
+    "stations = engine.execute(\"SELECT * FROM station\")\n",
+    "available_stations = session.query(stations)\n",
+    "print(session.name)\n",
+    "\n",
+    "# station = engine.execute(\"SELECT * FROM station\")\n",
+    "\n",
+    "# stations = session.query(station)\n",
+    "# print(session.station)\n",
+    "\n",
+    "# for station in stations:\n",
+    "#     print(f\"Stations Available: {station.station} | Names Of The Available Stations: {station.name}.\")\n",
     "    \n",
-    "station_count = engine.execute(\"SELECT count(station) FROM station\")\n",
-    "for count in station_count:\n",
-    "    print(f\"Number Of Stations: {count}.\")"
+    "# station_count = engine.execute(\"SELECT count(station) FROM station\")\n",
+    "# for count in station_count:\n",
+    "#     print(f\"Number Of Stations: {count}.\")"
    ]
   },
   {
