--- a/climate_final.ipynb
+++ b/climate_final.ipynb
@@ -1525,7 +1525,13 @@
       "('2017-03-10', 0.0)\n",
       "('2017-03-10', 0.03)\n",
       "('2017-03-10', 0.0)\n",
-      "('2017-03-11', 0.0)\n",
+      "('2017-03-11', 0.0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "('2017-03-11', 0.03)\n",
       "('2017-03-11', 0.0)\n",
       "('2017-03-11', 0.01)\n",
@@ -2114,13 +2120,7 @@
       "('2017-06-15', 0.55)\n",
       "('2017-06-15', 1.69)\n",
       "('2017-06-16', 0.0)\n",
-      "('2017-06-16', 0.02)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "('2017-06-16', 0.02)\n",
       "('2017-06-16', 0.02)\n",
       "('2017-06-16', None)\n",
       "('2017-06-16', 0.0)\n",
@@ -2924,7 +2924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2988,7 +2988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3033,7 +3033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3052,7 +3052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3125,7 +3125,7 @@
        "4  USC00519281  75.0  2016-08-27"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3137,7 +3137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3184,9 +3184,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(62.0, 69.57142857142857, 74.0)]\n"
+     ]
+    }
+   ],
    "source": [
     "# This function called `calc_temps` will accept start date and end date in the format '%Y-%m-%d' \n",
     "# and return the minimum, average, and maximum temperatures for that range of dates\n",
@@ -3210,24 +3218,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tmin' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-38-a967e84586d9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtmin\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtavg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtmax\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtmin\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'tmin' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Use your previous function `calc_temps` to calculate the tmin, tavg, and tmax \n",
-    "# for your trip using the previous year's data for those same dates.\n"
+    "# for your trip using the previous year's data for those same dates.\n",
+    "\n",
+    "# the previous date from the last year data \n",
+    "last_begin_date = dt.datetime(2016,8,22)\n",
+    "last_end_date = dt.datetime(2017,8,23)\n",
+    "\n",
+    "def last_year_temp_data(last_year_start_date, last_year_end_date):\n",
+    "    \n",
+    "    return session.query(func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)).\\\n",
+    "        filter(Measurement.date >= last_year_start_date).filter(Measurement.date <= last_year_end_date).all()\n",
+    "\n",
+    "    last_year_start_date = dt.date.strftime(last_begin_date, \"%Y-%m-%d\") - dt.date.timedelta(days=365).strftime(\"%Y-%m-%d\")\n",
+    "    last_year_end_date = dt.date.strftime(last_end_date, \"%Y-%m-%d\") - dt.date.timedelta(days=365).strftime(\"%Y-%m-%d\")\n",
+    "    return last_year_start_date, last_year_end_date\n",
+    "\n",
+    "last_year_start_date, last_year_end_date = last_year_temp_data(last_year_start_date, last_year_end_date)\n",
+    "\n",
+    "tmin, tavg, tmax = last_year_start_date, last_year_end_date[0][1]\n",
+    "\n",
+    "print(tmin, tavg, tmax)\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tavg' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-30-45d97ef5972d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# Use the peak-to-peak (tmax-tmin) value as the y error bar (yerr)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\" \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtavg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0myerr\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtmax\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mtmin\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'pink'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.75\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mylim\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m120\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Avg Temp\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfontsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'tavg' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Plot the results from your previous query as a bar chart. \n",
     "# Use \"Trip Avg Temp\" as your Title\n",
     "# Use the average temperature for the y value\n",
-    "# Use the peak-to-peak (tmax-tmin) value as the y error bar (yerr)\n"
+    "# Use the peak-to-peak (tmax-tmin) value as the y error bar (yerr)\n",
+    "\n",
+    "plt.bar(x=\" \", height=tavg, yerr=tmax-tmin, color='pink', alpha=0.75)\n",
+    "plt.ylim(0,120)\n",
+    "plt.ylabel(\"Avg Temp\", fontsize=10)\n",
+    "plt.title(\"Trip Avg Temp\", fontsize=10)\n",
+    "plt.figure(figsize=(9,18))\n",
+    "plt.tight_layout() \n",
+    "plt.show()\n"
    ]
   },
   {
